--- a/index.html
+++ b/index.html
@@ -1,46 +1,153 @@
 <html>
-  <head>
-    <!--Load the AJAX API-->
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
 
-      // Load the Visualization API and the corechart package.
-      google.charts.load('current', {'packages':['corechart']});
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 
-      // Set a callback to run when the Google Visualization API is loaded.
-      google.charts.setOnLoadCallback(drawChart);
+<body>
+  <div class="container">
+    <div class="row mt-3">
+      <div class="form-group col-md-4">
+        <label for="location">Location</label>
+        <select class="form-control" id="location">
+        </select>
+      </div>
+      <div class="form-group col-md-4">
+        <label for="year">Year</label>
+        <select class="form-control" id="year">
+          <option>2014</option>
+          <option>2015</option>
+          <option>2016</option>
+          <option>2017</option>
+        </select>
+      </div>
+      <div class="form-group col-md-4">
+        <label for="time">Time</label>
+        <select class="form-control" id="time">
+        </select>
+      </div>
+      <div id="test"></div>
+    </div>
+      <!--Div that will hold the pie chart-->
+      <div id="chart_div"></div>  
+  </div>
+  <!--Load the AJAX API-->
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script type="text/javascript">
+    // on document load, populate dropdown boxes
+    $(document).ready(function () {
+      $.ajax({
+        type: "GET",
+        url: "app/get_locations.php",
+        success: function (data) {
+          // decode JSON received back from get_readings.php
+          data = JSON.parse(data);
 
-      // Callback that creates and populates a data table,
-      // instantiates the pie chart, passes in the data and
-      // draws it.
-      function drawChart() {
+          var locationString = '';
 
-        // Create the data table.
-        var data = new google.visualization.DataTable();
-        data.addColumn('string', 'Topping');
-        data.addColumn('number', 'Slices');
-        data.addRows([
-          ['Mushrooms', 3],
-          ['Onions', 1],
-          ['Olives', 1],
-          ['Zucchini', 1],
-          ['Pepperoni', 2]
-        ]);
+          // generate dropdown option HTML based on data
+          for (var i = 0; i < data.length; i++) {
+            locationString += "<option value='" + data[i] + "'>" + data[i] + "</option>";
+          }
 
-        // Set chart options
-        var options = {'title':'How Much Pizza I Ate Last Night',
-                       'width':400,
-                       'height':300};
+          console.log(locationString);
 
-        // Instantiate and draw our chart, passing in some options.
-        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
-        chart.draw(data, options);
+          // append generated HTML to dropdown list
+          $('#location').append(locationString);
+
+          // below code populates times dropdown list
+          // begin: code copied from stack overflow answer found at https://codereview.stackexchange.com/a/121097
+          var quarterHours = ["00", "15", "30", "45"];
+
+          var times = [];
+          for (var i = 0; i < 24; i++) {
+            for (var j = 0; j < 4; j++) {
+              // Using slice() with negative index => You get always (the last) two digit numbers.
+              times.push(('0' + i).slice(-2) + ":" + quarterHours[j]);
+            }
+          }
+          // end: copied from stack overflow answer found at https://codereview.stackexchange.com/a/121097
+
+          var timeString = '';
+
+          for (var i = 0; i < times.length; i++) {
+            timeString += "<option value='" + times[i] + "'> " + times[i] + "</option>";
+          }
+
+          $('#time').append(timeString);
+
+        }
+      })
+    });
+
+    $('select').change(function () {
+      console.log($('#location').val());
+      $.ajax({
+        url: 'app/get_scatter_data.php',
+        dataType: 'json',
+        type: 'POST',
+        data: JSON.stringify({ "location": $('#location').val(), "year": $('#year').val(), "time": $('#time').val() }),
+        success: function (data) {
+          drawChart(data);
+          console.log(data);
+        },
+        error: function (xhr, status, error) {
+          var err = JSON.parse(xhr.responseText);
+          alert(err.message);
+        }
+      });
+    });
+
+    // Load the Visualization API and the corechart package.
+    google.charts.load('current', { 'packages': ['corechart'] });
+
+    // Set a callback to run when the Google Visualization API is loaded.
+    google.charts.setOnLoadCallback(drawChart);
+
+    // Callback that creates and populates a data table,
+    // instantiates the pie chart, passes in the data and
+    // draws it.
+    function drawChart(readingData) {
+
+      var result = [];
+      // format date string as date and no2 value as number
+      for (var i in readingData) {
+        var from = i.split("/")
+        var f = new Date(from[2], from[1] - 1, from[0])
+        result.push([f, parseInt(readingData[i])]);
       }
-    </script>
-  </head>
 
-  <body>
-    <!--Div that will hold the pie chart-->
-    <div id="chart_div"></div>
-  </body>
+      console.log(result);
+      // Create the data table.
+      var data = new google.visualization.DataTable();
+      data.addColumn('date', 'Date');
+      data.addColumn('number', 'no2 reading');
+      data.addRows(result);
+
+      // Set chart options
+      var options = {
+        'title': 'Air Quality',
+        'hAxis': {title: 'Date'},
+        'vAxis': {title: 'no2 level'},
+        'height': 600
+      };
+
+      // Instantiate and draw our chart, passing in some options.
+      var chart = new google.visualization.ScatterChart(document.getElementById('chart_div'));
+      chart.draw(data, options);
+    }
+  </script>
+</body>
+
 </html>
