--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="styles/style.css" rel="stylesheet">
+  <link href="styles/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -41,20 +41,14 @@
         </select>
       </div>
       <div class="line-options form-group col-md-4">
-          <label for="datepicker">Reading Date</label>
-          <input class="form-control" type="date" id="datepicker">
-        </div>
+        <label for="datepicker">Reading Date</label>
+        <input class="form-control" type="date" id="datepicker">
+      </div>
     </div>
-    <!--Div that will hold the scatter chart-->
-    
-      <div id="scatter_chart_div"></div>
-  
-   
-
-      <div id="line_chart_div"></div>
-   
+    <div id="scatter_chart_div"></div>
+    <div id="line_chart_div"></div>
   </div>
-  <!--Load the AJAX API-->
+  <!--Load bootstrap, jquery, and google charts API-->
   <script src="https://www.gstatic.com/charts/loader.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
